# duckstation

src/core/: host_interface.cpp  settings.cpp  settings.h
src/duckstation-qt/: d3d11displaywindow.cpp  opengldisplaywindow.cpp  opengldisplaywindow.h  qthostinterface.cpp
src/duckstation-sdl/: CMakeLists.txt  d3d11_host_display.cpp  d3d11_host_display.h  opengl_host_display.cpp  sdl_host_interface.cpp
src/frontend-common/: CMakeLists.txt  sdl_controller_interface.cpp  sdl_controller_interface.h
